# Document-Retrieval-and-Question-Answering-System

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/agent/: graph.py  state.py
backend/app/agent/nodes/: auditor_node.py  generator_node.py  retriever_node.py  router.py  tool_node.py
backend/app/agent/tools/: __init__.py  calculator.py  web_search.py
backend/app/api/routes/: admin.py  agent.py  evaluation.py  ingestion.py  query.py  search.py
backend/app/core/: config.py  database.py  errors.py  events.py  logging.py  middleware.py
backend/app/models/: __init__.py  chunk.py  document.py  evaluation.py
backend/app/services/: chunking_service.py  document_service.py  embedding_service.py  evaluation_service.py  generation_service.py  retrieval_service.py  vector_store_service.py
backend/app/utils/: file_handler.py  url_parser.py
backend/config/: logging.yaml
frontend/: DOCUMENT_CARD_IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: BuildIndexSection.tsx  ErrorBoundary.tsx  EvaluationPanel.tsx  LoadingSpinner.tsx  ResetDatabaseSection.tsx  SessionBar.tsx  UploadSection.tsx  UrlIngestSection.tsx
frontend/src/hooks/: useIndexBuilder.ts  useSSE.ts  useUpload.ts  useUrlIngest.ts
frontend/src/pages/: ChatPage.tsx  EvaluationPage.tsx  LandingPage.tsx  UploadPage.tsx  WorkspacePage.tsx
frontend/src/services/: api.ts  apiClient.ts
(+25 files in other folders)
